manifests/dreamkast-tools/dreamkast-releasebot/overlays/development/ingress.yaml
---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: dreamkast-releasebot-ingress
  labels:
    app: dreamkast-releasebot
spec:
  virtualhost:
    fqdn: dreamkast-releasebot.dev.cloudnativedays.jp
    tls:
      secretName: cert-manager/wildcard-dev-cloudnativedays-jp
  routes:
    - conditions:
      - prefix: /
      services:
      - name: dreamkast-releasebot
        port: 8080
